--- a/about_me.html
+++ b/about_me.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link rel="icon" href="image/bismillah.jpg">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/page2.css">
+    <link rel="stylesheet" href="css/about_me.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -49,7 +51,7 @@
     <div class="share draggable">
         <div class="toggle"></div>
         <ul>
-            <li><a href="page4.html"><i class="fa fa-home"></i></a></li>
+            <li><a href="home.html"><i class="fa fa-home"></i></a></li>
         </ul>
     </div>
 
@@ -62,7 +64,7 @@
             </div>
             <div class="details">
                 <div class="content">
-                    <i class="fa fa-gift" aria-hidden="true"></i>
+                    <i class="fa fa-user" aria-hidden="true"></i>
                     <h3>Who am I ?</h3>
                     <a id="link" data-toggle="modal" data-target
                     ="#modal1" href="#" class="btn btn-outline-light">Read More</a>
@@ -176,19 +178,9 @@
     <!-- ========== Modal 2 ========== -->
     <div class="modal fade" id="modal2" tabindex="-1">
         <div class="modal-dialog modal-lg" role="document" style="top: 10%;">
-            <div class="modal-content" style="background: #428bc7d9;">
+            <div class="modal-content" style="background: none;">
                 <div class="modal-body">
-                    <div class="row">
-                        <img class="modal-img2" src="image/college.jpg">
-                        <div class="modal-subcontent">
-                            <i class="fa fa-graduation-cap ion" style="font-size: 2cm; margin: 10px;margin-bottom: 25px;"></i><br>
-                            Bachelor Engineer of Computer Engineering <br>
-                            <hr style="width: 4cm; border-top: 1px solid rgba(0,0,0,.3);">
-                            Electronic Engineering Polytechnic Institute of Surabaya (EEPIS) <br>
-                            <hr style="width: 4cm; border-top: 1px solid rgba(0,0,0,.3);">
-                            GPA Score : 3.30 (Scale 4.00) <br>
-                        </div>
-                    </div>
+                    <img src="image/educated.jpg" style="border-radius: 10px; width: 100%;">
                 </div>
             </div>
         </div>
