--- a/home.html
+++ b/home.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link rel="icon" href="image/bismillah.jpg">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/page4.css">
+    <link rel="stylesheet" href="css/home.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -60,7 +62,7 @@
         <div class="toggle"></div>
         <ul>
             <li><a href="index.html"><i class="fa fa-sign-in"></i></a></li>
-            <li><a href="page2.html"><i class="fa fa-user"></i></a></li>
+            <li><a href="about_me.html"><i class="fa fa-user"></i></a></li>
             <li><a href="page4.html"><i class="fa fa-home"></i></a></li>
             <li><a class="unlink" href="#"></a></li>
             <li><a class="unlink" href="#"></a></li>
@@ -180,5 +182,5 @@
 
 </html>
 
-<script src="js/page4.js"></script>
+<script src="js/home.js"></script>
 
