--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="icon" href="image/bismillah.jpg">
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orbitron">
@@ -49,7 +52,7 @@
                 <li>R</li>
                 <li>O</li>
             </ul>
-            <a href="page4.html" class="enter-button">E N T E R</a>
+            <a href="home.html" class="enter-button">E N T E R</a>
         </div>
     </div>
 
