--- a/skills.html
+++ b/skills.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="icon" href="image/bismillah.jpg">
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/page3.css">
+    <link rel="stylesheet" href="css/skills.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -48,7 +51,7 @@
     <div class="share draggable">
         <div class="toggle"></div>
         <ul>
-            <li><a href="page4.html"><i class="fa fa-home"></i></a></li>
+            <li><a href="home.html"><i class="fa fa-home"></i></a></li>
         </ul>
     </div>
 
