--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
 
 
     <!-- ---------------------------------- SOCIAL MEDIA -------------------------------------- -->
-    <div class="container">
+    <div class="container c-social">
         <div class="section-2">
             <ul class="social">
                 <li>
