--- a/skills.html
+++ b/skills.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/skills.css">
+    <link rel="stylesheet" href="css/skills2.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -57,7 +58,7 @@
 
 
     <!-- -------------------------------------------------------------------------------------- -->
-    <div class="container">
+    <div class="container grid">
 
         <!-- ---------------------- GRID ---------------------- -->
 
@@ -66,9 +67,9 @@
                 <div class="gor1"></div>
                 <div class="layer layer1">
                     <span style="position: relative; top: 1cm;">
-                        <img src="image/skills/html5.png" style="width: 50%;"><br>
-                        <img src="image/skills/css.png" style="width: 55%;"><br>
-                        <img src="image/skills/js.jpg" style="width: 35%; border-radius: 20px;margin-top: 2em;"><br>
+                        <img id="a" src="image/skills/html5.png" ><br>
+                        <img id="b" src="image/skills/css.png" ><br>
+                        <img id="c" src="image/skills/js.jpg" ><br>
                     </span>
                 </div>
             </div>
@@ -106,13 +107,11 @@
                 <div class="gor5"></div>
                 <div class="layer layer5">
                     <span style="position: relative; top: 3cm;">
-                        <h1>What Else ??</h1>
+                        <h1>Zoom In ( Press Ctrl + Scroll Up ) <br> to See More Specific</h1>
                     </span>
                 </div>
             </div>
         </div>
-
-
 
         <!-- ------------------------------ MODAL ----------------------------------- -->
 
@@ -126,7 +125,61 @@
             </div>
         </div>
     </div>
-        
+
+
+    
+    <!-- --------------------------- TIMELINE MEDIA --------------------------------- -->
+    <div class="timeline">
+        <ul>
+            <li>
+                <div class="content">
+                    <h3>Basic Skills</h3>
+                    <p><br>
+                        <img id="d" src="image/skills/html5.png">
+                        <img id="e" src="image/skills/css.png" >
+                        <img id="f" src="image/skills/js.jpg" >
+                    </p>
+                </div>
+                <div class="time one">
+                    <h4>Panel - 1</h4>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h3>Framework skills</h3>
+                    <p><br>
+                        <img id="g" src="image/skills/jquery.png">
+                        <img id="h" src="image/skills/bootstrap.png" > <br>
+                        <img id="i" src="image/skills/yii.png" >
+                        <img id="j" src="image/skills/codeigniter.png" >
+                    </p>
+                </div>
+                <div class="time two">
+                    <h4>Panel - 2</h4>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h3>Back End Skills</h3>
+                    <p><br>
+                        <img id="k" src="image/skills/php.png">
+                        <img id="l" src="image/skills/mysql.png" >
+                    </p>
+                </div>
+                <div class="time three">
+                    <h4>Panel - 3</h4>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h3>Other Skills</h3>
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae et debitis facere, accusamus dolores id iste, totam error consequuntur nostrum enim temporibus? Quaerat at repellendus similique exercitationem possimus obcaecati. Rerum?</p> -->
+                </div>
+                <div class="time four">
+                    <h4>Panel - 4</h4>
+                </div>
+            </li>
+        </ul>
     </div>
 
 </body>
