--- a/experiences.html
+++ b/experiences.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/experiences.css">
+    <link rel="stylesheet" href="css/experiences2.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -55,8 +56,9 @@
         </ul>
     </div>
 
+
     <!-- ---------------------------------- MAIN SECTION -------------------------------------- -->
-    <div class="container">
+    <div class="container main">
         <div class="section1">
             <div class="content">
                 <h2>Varta Microbattery Corp.</h2>
@@ -118,6 +120,86 @@
             <div class="subcontent5"></div>
         </div>
     </div>
+
+
+
+    <!-- --------------------------- TIMELINE MEDIA --------------------------------- -->
+    <div class="timeline">
+        <ul>
+            <li>
+                <div class="content">
+                    <h3>Varta Microbattery Corp.</h3>
+                    <p><br>
+                        Developed collaboratively on web design, project progress monitoring, reporting, and documentation system of battery production in Varta Project Management Module 
+                        <br><br>
+                        Tools : SQL Server 2014, VS Express 2013 <br>
+                        Framework : ASP.NET MVC 4, Foundation, JQuery
+                    </p>
+                </div>
+                <div class="time one">
+                    <h4>Panel - 1</h4>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h3>PGN - PGASCOM (ERP Procurement Module)</h3>
+                    <p><br>
+                        Developed collaboratively on business process, workflow system, master data, transaction, and reporting of procurement module system
+                        <br><br>
+                        Tools : XAMPP, Heidi SQL, SVN Tortoise, Visual Studio Code <br>
+                        Framework : PHP Yii, Bootstrap, JQuery
+                    </p>
+                </div>
+                <div class="time two">
+                    <h4>Panel - 2</h4>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h3>Hospital Management & Information System</h3>
+                    <p><br>
+                        Developed on web design, workflow system, and master data of product management system
+                        <br><br><br>
+                        Tools :	XAMPP, Heidi SQL, Visual Studio Code <br>
+                        Framework : PHP Codeigniter, Bootstrap, JQuery
+                    </p>
+                </div>
+                <div class="time three">
+                    <h4>Panel - 3</h4>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h3>Personal Blog <br> (Content Management System) </h3>
+                    <p><br>
+                        Developed on web design, database, and workflow of CMS
+                        <br><br><br>
+                        Tools :	XAMPP, Heidi SQL, Visual Studio Code <br>
+                        Framework : PHP Codeigniter, Bootstrap
+                    </p>
+                </div>
+                <div class="time four">
+                    <h4>Panel - 4</h4>
+                </div>
+            </li>
+            <li>
+                <div class="content">
+                    <h3>Online Shop <br> (Content Management System)</h3>
+                    <p><br>
+                        Developed on web design, database, and workflow of CMS
+                        <br><br><br>
+                        Tools :	XAMPP, Heidi SQL, Visual Studio Code <br>
+                        Framework : PHP Native, Bootstrap, JQuery
+                    </p>
+                </div>
+                <div class="time five">
+                    <h4>Panel - 5</h4>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+
 
 </body>
 
