--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
                     </p>
                 </div>
                 <div class="time one">
-                    <h4>Channel #1</h4>
+                    <h4>1# Click Me!</h4>
                 </div>
             </li>
             <li>
@@ -98,7 +98,7 @@
                     </p>
                 </div>
                 <div class="time two">
-                    <h4>Channel #2</h4>
+                    <h4>2# Click Me!</h4>
                 </div>
             </li>
             <li>
@@ -115,7 +115,7 @@
                     </p>
                 </div>
                 <div class="time three">
-                    <h4>Channel #3</h4>
+                    <h4>3# Click Me!</h4>
                 </div>
             </li>
             <li>
@@ -124,7 +124,7 @@
                     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae et debitis facere, accusamus dolores id iste, totam error consequuntur nostrum enim temporibus? Quaerat at repellendus similique exercitationem possimus obcaecati. Rerum?</p> -->
                 </div>
                 <div class="time four">
-                    <h4>Channel #4</h4>
+                    <h4>4# Wait!</h4>
                 </div>
             </li>
         </ul>
