--- a/about_me.html
+++ b/about_me.html
@@ -48,13 +48,11 @@
 
 
     <!-- ------------------------------ DRAGGABLE BUTTON -------------------------------------- -->
-    <div class="share draggable">
-        <div class="toggle"></div>
-        <ul>
-            <li><a href="home.html"><i class="fa fa-home"></i></a></li>
-        </ul>
-    </div>
 
+    <div class="share draggable" style="top: 35%;">
+        <div class="toggle">
+        </div>
+    </div>
 
     <!-- ------------------------------------ SECTION 1 --------------------------------------- -->
     <div class="container">
@@ -222,8 +220,10 @@
 <script>
     $(document).ready(function() {
         $('.toggle').dblclick(function () {
-            $('.toggle').toggleClass('active');
-            $('ul').toggleClass('active')
+            $('body').fadeOut(2000, newpage);
+            function newpage() {
+                window.location.href = 'home.html';
+            }
         })
         $('.draggable').draggable()
     })
