--- a/home.html
+++ b/home.html
@@ -63,12 +63,12 @@
         <ul>
             <li><a href="index.html"><i class="fa fa-sign-in"></i></a></li>
             <li><a href="about_me.html"><i class="fa fa-user"></i></a></li>
-            <li><a href="page4.html"><i class="fa fa-home"></i></a></li>
+            <li><a href="home.html"><i class="fa fa-home"></i></a></li>
             <li><a class="unlink" href="#"></a></li>
             <li><a class="unlink" href="#"></a></li>
             <li><a class="unlink" href="#"></a></li>
-            <li><a href="page5.html"><i class="fa fa-binoculars"></i></a></li>
-            <li><a href="page3.html"><i class="fa fa-book"></i></a></li>
+            <li><a href="experiences.html"><i class="fa fa-binoculars"></i></a></li>
+            <li><a href="skills.html"><i class="fa fa-book"></i></a></li>
         </ul>
     </div>
 
@@ -105,12 +105,12 @@
                 <div class="content">
                     <h3>What about my experiences ?</h3>
                     <p><br>
-                        All humans are dead except those who have knowledge, <br> 
+                        " All humans are dead except those who have knowledge, <br> 
                         and all those who have knowledge are asleep, <br> 
                         except those who do good deeds, <br> 
                         and those who do good deeds are deceived, <br> 
                         except those who are sincere, <br> 
-                        and those who are sincere are always in a state of worry. <br><br>
+                        and those who are sincere are always in a state of worry. " <br><br>
                         <i> – Muhammad bin Idris Asy Syafi'i rahimahullah </i>
                     </p>
                 </div>
