--- a/home.html
+++ b/home.html
@@ -63,12 +63,12 @@
         <ul>
             <li><a href="index.html"><i class="fa fa-sign-in"></i></a></li>
             <li><a href="about_me.html"><i class="fa fa-user"></i></a></li>
-            <li><a href="page4.html"><i class="fa fa-home"></i></a></li>
+            <li><a href="home.html"><i class="fa fa-home"></i></a></li>
             <li><a class="unlink" href="#"></a></li>
             <li><a class="unlink" href="#"></a></li>
             <li><a class="unlink" href="#"></a></li>
-            <li><a href="page5.html"><i class="fa fa-binoculars"></i></a></li>
-            <li><a href="page3.html"><i class="fa fa-book"></i></a></li>
+            <li><a href="experiences.html"><i class="fa fa-binoculars"></i></a></li>
+            <li><a href="skills.html"><i class="fa fa-book"></i></a></li>
         </ul>
     </div>
 
